// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NullifierHasher calculates some hashes 1`] = `
Object {
  "data": Array [
    67,
    115,
    120,
    254,
    209,
    140,
    189,
    171,
    175,
    57,
    73,
    186,
    56,
    33,
    7,
    236,
    74,
    220,
    100,
    24,
    245,
    102,
    148,
    82,
    6,
    248,
    98,
    57,
    23,
    49,
    189,
    20,
  ],
  "type": "Buffer",
}
`;

exports[`NullifierHasher calculates some hashes 2`] = `
Object {
  "data": Array [
    195,
    114,
    61,
    203,
    20,
    56,
    192,
    94,
    45,
    189,
    160,
    148,
    66,
    29,
    20,
    86,
    67,
    142,
    160,
    142,
    233,
    149,
    231,
    31,
    242,
    152,
    240,
    205,
    35,
    138,
    205,
    174,
  ],
  "type": "Buffer",
}
`;

exports[`NullifierHasher calculates some hashes 3`] = `
Object {
  "data": Array [
    97,
    57,
    177,
    159,
    237,
    46,
    198,
    53,
    160,
    65,
    202,
    136,
    103,
    85,
    165,
    180,
    118,
    208,
    241,
    21,
    245,
    77,
    56,
    152,
    201,
    193,
    49,
    127,
    24,
    55,
    166,
    161,
  ],
  "type": "Buffer",
}
`;

exports[`NullifierHasher calculates some hashes 4`] = `
Object {
  "data": Array [
    236,
    235,
    40,
    193,
    243,
    199,
    129,
    29,
    151,
    84,
    2,
    130,
    45,
    21,
    217,
    77,
    135,
    225,
    117,
    84,
    145,
    99,
    94,
    72,
    84,
    56,
    66,
    247,
    175,
    201,
    201,
    86,
  ],
  "type": "Buffer",
}
`;

exports[`NullifierHasher calculates some hashes 5`] = `
Object {
  "data": Array [
    169,
    144,
    47,
    150,
    16,
    16,
    187,
    64,
    98,
    50,
    142,
    61,
    53,
    60,
    133,
    192,
    190,
    224,
    49,
    183,
    113,
    207,
    82,
    201,
    137,
    197,
    169,
    15,
    80,
    82,
    119,
    236,
  ],
  "type": "Buffer",
}
`;

exports[`NullifierHasher calculates some hashes 6`] = `
Object {
  "data": Array [
    8,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    125,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    2,
    0,
    0,
    255,
  ],
  "type": "Buffer",
}
`;

exports[`NullifierHasher combines hashes 1`] = `
Object {
  "data": Array [
    42,
    17,
    91,
    233,
    98,
    215,
    92,
    97,
    155,
    68,
    237,
    150,
    128,
    135,
    221,
    175,
    189,
    218,
    100,
    173,
    86,
    15,
    197,
    101,
    176,
    132,
    68,
    57,
    163,
    128,
    230,
    57,
  ],
  "type": "Buffer",
}
`;

exports[`NullifierHasher combines hashes 2`] = `
Object {
  "data": Array [
    7,
    247,
    77,
    25,
    22,
    30,
    119,
    81,
    46,
    173,
    220,
    9,
    39,
    54,
    126,
    3,
    55,
    255,
    127,
    178,
    60,
    216,
    28,
    141,
    139,
    202,
    29,
    240,
    6,
    198,
    183,
    149,
  ],
  "type": "Buffer",
}
`;

exports[`NullifierHasher combines hashes 3`] = `
Object {
  "data": Array [
    82,
    149,
    204,
    114,
    47,
    108,
    139,
    23,
    139,
    230,
    97,
    218,
    41,
    245,
    241,
    237,
    253,
    174,
    83,
    9,
    73,
    121,
    193,
    150,
    68,
    47,
    120,
    60,
    123,
    29,
    120,
    52,
  ],
  "type": "Buffer",
}
`;

exports[`NullifierHasher combines hashes 4`] = `
Object {
  "data": Array [
    48,
    205,
    187,
    142,
    215,
    230,
    15,
    250,
    230,
    38,
    180,
    253,
    89,
    170,
    80,
    17,
    25,
    235,
    91,
    99,
    92,
    35,
    59,
    201,
    45,
    212,
    142,
    5,
    111,
    85,
    111,
    219,
  ],
  "type": "Buffer",
}
`;

exports[`NullifierHasher combines hashes 5`] = `
Object {
  "data": Array [
    32,
    82,
    114,
    141,
    182,
    53,
    217,
    9,
    99,
    240,
    237,
    63,
    196,
    68,
    10,
    147,
    133,
    5,
    102,
    21,
    32,
    97,
    220,
    16,
    16,
    209,
    89,
    253,
    185,
    221,
    200,
    106,
  ],
  "type": "Buffer",
}
`;

exports[`NullifierHasher combines hashes 6`] = `
Object {
  "data": Array [
    80,
    232,
    132,
    50,
    176,
    210,
    46,
    48,
    117,
    83,
    46,
    150,
    152,
    153,
    91,
    160,
    244,
    61,
    16,
    129,
    83,
    111,
    210,
    103,
    234,
    81,
    205,
    187,
    91,
    128,
    56,
    24,
  ],
  "type": "Buffer",
}
`;

exports[`NullifierHasher combines hashes 7`] = `
Object {
  "data": Array [
    8,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    2,
    0,
    0,
    0,
  ],
  "type": "Buffer",
}
`;

exports[`NullifierHasher combines hashes 8`] = `
Object {
  "data": Array [
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    125,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    255,
  ],
  "type": "Buffer",
}
`;

exports[`NullifierHasher constructs a nullifier hasher 1`] = `NullifierHasher {}`;
